[package]
name = "lb_clmm"
version = "0.8.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_clmm"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = "0.30.1"
uint = "0.8.5"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
num_enum = "0.7.1"
